--- a/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -87,6 +87,13 @@
                     </div>
                 </li>
                 <hr class="sidebar-divider d-none d-md-block">
+                <li class="nav-item active">
+                    <a class="nav-link" asp-action="Index" asp-controller="Setting" asp-area="Admin">
+                        <i class="fas fa-fw fa-gears"></i>
+                        <span>Configurações</span>
+                    </a>
+                </li>
+                <hr class="sidebar-divider d-none d-md-block">
             }
 
             <!-- Sidebar Toggler (Sidebar) -->
