--- a/Blog_Escola/Views/Page/Contact.cshtml
+++ b/Blog_Escola/Views/Page/Contact.cshtml
@@ -29,7 +29,7 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <p>@Model.Description</p>
+                <p>@Html.Raw(Model.Description)</p>
                 <br />
                 <p>Preencha o formulário e descreva suas dúvidas!</p>
                 <div class="my-5">
