--- a/Blog_Escola/Views/Shared/_Layout.cshtml
+++ b/Blog_Escola/Views/Shared/_Layout.cshtml
@@ -1,11 +1,29 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@using Blog_Escola.Data;
+@using Blog_Escola.ViewModels;
+@inject ApplicationDbContext _context;
+@{
+    var setting = _context.Settings!.ToList();
+    var vm = new SettingVM()
+    {
+        SiteName = setting[0].SiteName,
+        Title = setting[0].Title,
+        ShortDescription = setting[0].ShortDescription,
+        GitHub = setting[0].GitHub,
+        LinkedIn = setting[0].LinkedIn,
+        Gmail = setting[0].Gmail,
+        Portifolio = setting[0].Portifolio,
+        WhatsApp = setting[0].WhatsApp
+    };
+}
+
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>@ViewData["Title"] - Blog Escola</title>
+    <title>@ViewData["Title"] - @vm.SiteName</title>
     <link rel="icon" type="image/x-icon" href="~/Blog/assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -19,7 +37,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" asp-controller="Home" asp-action="Index">Escola DOTNET</a>
+            <a class="navbar-brand" asp-controller="Home" asp-action="Index">@vm.SiteName</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -45,7 +63,7 @@
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <ul class="list-inline text-center">
                         <li class="list-inline-item">
-                            <a href="https://github.com/devjuliomesquita" target="_blank">
+                            <a href="@vm.GitHub" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
                                     <i class="fab fa-github fa-stack-1x "></i>
@@ -53,7 +71,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://www.linkedin.com/in/dev-julio-c-martins/" target="_blank">
+                            <a href="@vm.LinkedIn" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
                                     <i class="fab fa-linkedin fa-stack-1x "></i>
@@ -61,7 +79,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://api.whatsapp.com/send?phone=5585996816053&text=Ol%C3%A1%2C%20encontrei%20seu%20portf%C3%B3lio%20e%20estou%20interessado%20em%20seu%20trabalho." target="_blank">
+                            <a href="@vm.WhatsApp" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
                                     <i class="fab fa-whatsapp fa-stack-1x "></i>
@@ -69,7 +87,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="mailto:juliocesarmcamilo@gmail.com" target="_blank">
+                            <a href="mailto: @vm.Gmail" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
                                     <i class="fa-regular fa-envelope fa-stack-1x "></i>
@@ -77,7 +95,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://portifolio-pessoal-tan.vercel.app/" target="_blank">
+                            <a href="@vm.Portifolio" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     @*<i class="fas fa-circle fa-stack"></i>*@
                                     <i class="fas fa-laugh-wink fa-stack-1x "></i>
@@ -87,7 +105,7 @@
                         
                     </ul>
                     <h5 class="text-center m-2">Veja mais sobre o criador deste Web Site</h5>
-                    <div class="small text-center text-muted fst-italic">Copyright &copy; Escola DOTNET @DateTime.Now.Year</div>
+                    <div class="small text-center text-muted fst-italic">Copyright &copy; @vm.SiteName @DateTime.Now.Year</div>
                 </div>
             </div>
         </div>
