--- a/Blog_Escola/Views/Home/Index.cshtml
+++ b/Blog_Escola/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@model Blog_Escola.ViewModels.HomeVM
+@using X.PagedList
+@using X.PagedList.Mvc.Core
+@using X.PagedList.Web.Common
 @{
     ViewData["Title"] = "Home Page";
     string thumbnailUrl = "";
-    if(Model.ThumbnailUrl == "")
+    if (Model.ThumbnailUrl == "" || Model.ThumbnailUrl == null)
     {
         thumbnailUrl = "/Blog/assets/img/home-bg.jpg";
     }
@@ -27,7 +30,7 @@
 <!-- Main Content-->
 <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
+        <div class="col-md-10 col-lg-8 col-xl-7 ">
             @foreach(var post in Model.Posts!)
             {
                 <!-- Post preview-->
@@ -48,7 +51,20 @@
             
             
             <!-- Pager-->
-            <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Outros Posts →</a></div>
+            <div class="">
+                
+                Página @(Model?.Posts.PageCount < Model?.Posts.PageNumber ? 0 : Model?.Posts.PageNumber) de @Model?.Posts.PageCount
+                @Html.PagedListPager(Model?.Posts,page => Url.Action("Index",
+                new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }),
+                new PagedListRenderOptions()
+                {
+                ContainerDivClasses = new List<string> {"d-flex justify-content-end mt-2 mb-4"},
+                UlElementClasses = new List<string> {"pagination"},
+                LiElementClasses = new List<string> {"btn btn-primary font-weight-bolder"},
+                ActiveLiElementClass =  "active",
+                })
+                
+            </div>
         </div>
     </div>
 </div>
